<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="7dp"
    android:layout_marginTop="7dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/background_dark"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:elevation="100dp">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/imagen"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/imagen"
            android:paddingLeft="10dp"
            app:srcCompat="@drawable/user0" />

        <TextView
            android:id="@+id/txtRemitente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="19dp"
            android:paddingLeft="90dp"
            android:text="@string/remitente"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtAsunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtRemitente"
            android:layout_below="@+id/txtRemitente"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="40dp"
            android:paddingLeft="90dp"
            android:text="@string/asunto"
            android:textColor="@android:color/holo_orange_light" />

    </RelativeLayout>
</android.support.v7.widget.CardView>