<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imgRemitente"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:contentDescription="@string/imgremitente"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/user0"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="48dp" />

            <TextView
                android:id="@+id/txtNombreRemite"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/remitente"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgRemitente" />

            <TextView
                android:id="@+id/txtAsunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/asunto"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreRemite" />

            <TextView
                android:id="@+id/txtTexto"
                android:layout_width="match_parent"
                android:layout_height="318dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:background="@color/cardview_light_background"
                android:padding="10dp"
                android:text="@string/texto_del_correo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAsunto"
                app:layout_constraintVertical_bias="0.908" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
