<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context="com.esgueva.esmail.vista.EdicionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/destinatario"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="96dp" />

        <Spinner
            android:id="@+id/spinnerUser"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="199dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="150dp"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="100dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:text="@string/asunto"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="126dp" />

        <EditText
            android:id="@+id/txtAsuntoE"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="244dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="250dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/texto"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="285dp" />

        <EditText
            android:id="@+id/txtTextoE"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginTop="15dp"
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="186dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/enviar_nuevo_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
